# copilot-sdk-cpp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
cmake/: copilot_sdk_cppConfig.cmake.in
examples/: CMakeLists.txt  attachments.cpp  basic_chat.cpp  byok.cpp  compaction_events.cpp  custom_agents.cpp  fluent_tools.cpp  hooks.cpp  list_models.cpp  mcp_servers.cpp  permission_callback.cpp  reasoning_effort.cpp  resume_with_tools.cpp  streaming.cpp  system_prompt.cpp  tool_progress.cpp  tools.cpp  user_input.cpp
examples/mcp/: CMakeLists.txt
examples/mcp/inprocess/: CMakeLists.txt  README.md  mcp_inprocess.cpp
include/copilot/: client.hpp  copilot.hpp  events.hpp  jsonrpc.hpp  process.hpp  session.hpp  tool_builder.hpp  transport.hpp  transport_stdio.hpp  transport_tcp.hpp  types.hpp
src/: client.cpp  events.cpp  jsonrpc.cpp  process_posix.cpp  process_win32.cpp  session.cpp  transport.cpp  types.cpp
tests/: .gitignore  CMakeLists.txt  test_client_session.cpp  test_e2e.cpp  test_jsonrpc.cpp  test_process.cpp  test_tool_builder.cpp  test_transport.cpp  test_types.cpp
tests/repro/: .gitignore  CMakeLists.txt  README.md  byok.env.example  repro_resume_with_tools.cpp
tests/snapshot_tests/: CMakeLists.txt  snapshot_replay.cpp  snapshot_runner.py
